# zephir-api2

./: .dockerignore  .gitignore  API.md  Dockerfile  README.md  bootstrap_db.py  buildspec.yml  docker-compose.yml  env.example  gunicorn_config.py  healthcheck.sh  print_env.py  pyproject.toml  summary.py  zephir_api.py
.githooks/: pre-commit
.github/workflows/: ci.yml  code-analysis.yml  code-matrix.yml  compatability-matrix.yml  docker-matrix.yml
app/: __init__.py  config.py  models.py  routes.py
deployment/config/: config.yaml
deployment/config/dev/: autoscaling.yaml  codebuild.yaml  config.yaml  ecr.yaml  ecs.yaml  logging.yaml  network.yaml  waf.yaml
deployment/config/prd/: autoscaling.yaml  config.yaml  ecr.yaml  ecs.yaml  logging.yaml  network.yaml  waf.yaml
deployment/config/stg/: autoscaling.yaml  config.yaml  ecr.yaml  ecs.yaml  network.yaml  waf.yaml
deployment/scripts/: deploy.sh  destroy.sh  ecr_push.sh
deployment/templates/: autoscaling.yaml  codebuild.yaml.j2  ecr.yaml  ecr.yaml.j2  ecs.yaml  ecs.yaml.j2  logging.yaml  logging.yaml.j2  network.yaml.j2  waf.yaml  waf.yaml.j2
scripts/: healthcheck.py
tests/: conftest.py  db.sql  sample_data.csv  test_zephir_api.py
tests/test_zephir_api/: db.sqlite  db.sqlite.orig
