[tool.poetry]
name = "zephir-api"
version = "0.1.0"
description = "Zephir Item API"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1"
flask_sqlalchemy = "^3.1.1"
mysql-connector-python = "^9.2.0"
markdown = "^3.7"
markupsafe = "^3.0.2"
gunicorn = "^23.0.0"
boto3 = "^1.36.16"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-flask = "^1.3.0"
bandit = "^1.8.2"
ruff = "^0.6.1"
pytest-cov = "^6.0.0"
vulture = "^2.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"