[project]
name = "zephir-api"
version = "0.1.0"
description = "Zephir Item API"
authors = []
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "flask~=3.1",
    "flask-sqlalchemy~=3.1",
    "mysql-connector-python~=9.2",
    "markdown~=3.7",
    "markupsafe~=3.0",
    "gunicorn~=23.0",
    "boto3~=1.36",
]

[dependency-groups]
dev = [
    "pytest~=8.3",
    "pytest-flask~=1.3",
    "bandit~=1.8",
    "ruff~=0.6",
    "pytest-cov~=6.0",
    "vulture~=2.14",
]