[project]
name = "zephir-api"
version = "0.1.0"
description = "Zephir Item API"
authors = []
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "flask~=3.1",
    "flask-sqlalchemy~=3.1",
    "mysql-connector-python~=9.6",
    "markdown~=3.10",
    "markupsafe~=3.0",
    "gunicorn~=25.1",
    "boto3~=1.42",
]

[dependency-groups]
dev = [
    "pytest~=9.0",
    "pytest-flask~=1.3",
    "bandit~=1.9",
    "ruff~=0.15",
    "pytest-cov~=7.0",
    "vulture~=2.15",
]
